--- a/TopB.html
+++ b/TopB.html
@@ -19,7 +19,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/news-articles.html"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/News.jpg" width="240" height="240" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">&nbsp;</div>
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -48,7 +48,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/join-our-mailing-list.html"><span style="color: #036d98;">E-NEWSLETTER</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/E-NEWSLETTER.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
@@ -58,7 +58,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/press-room/speakers-bureau.html"><span style="color: #036d98;">SPEAKERS BUREAU</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Speakers Bureau.png" width="220" height="150" />
+<img class="uk-align-center" src="/images/topbslider/SPEAKERS BUREAU.JPG" width="220" height="150" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -70,7 +70,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/how-to-help/internship-opportunities.html"><span style="color: #036d98;">INTERNSHIP OPPORTUNITIES</span></a></h3>
-<img class="uk-align-center" src="/images/internship/IMG_0002.JPG" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/INTERNSHIP OPPORTUNITIES.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
@@ -88,7 +88,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/IMG_1028.JPG" alt="safeShirt" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/SAFE STORE.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
