--- a/TopB.html
+++ b/TopB.html
@@ -8,7 +8,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/join-safe/become-a-member.html"><span style="color: #036d98;">BECOME A MEMBER</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/JoinTheMovement.jpg" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/BECOME A MEMBER.JPG" width="220" height="220" />
 
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -19,7 +19,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/news-articles.html"><span style="color: #036d98;">NEWS ARTICLE</span></a></h3>
-<img class="uk-align-center" src="/images/topbslider/News.jpg" width="240" height="240" />
+<img class="uk-align-center" src="/images/topbslider/InTheNews.JPG" width="240" height="240" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">&nbsp;</div>
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -29,7 +29,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-animation-top-right" href="/safe1/finding-help/national-directory.html"><span style="color: #036d98;">National Directory</span></a></h3>
-<img id="usa" class="map uk-align-center" name="usa" alt="" src="/images/usa2.png" width="220" height="220" usemap="#usa" />
+<img id="usa" class="map uk-align-center" name="usa" alt="" src="/images/topbslider/NATIONAL DIRECTORY.JPG" width="220" height="220" usemap="#usa" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -70,7 +70,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/how-to-help/internship-opportunities.html"><span style="color: #036d98;">INTERNSHIP OPPORTUNITIES</span></a></h3>
-<img class="uk-align-center" src="/images/topbslider/INTERNSHIP OPPORTUNITIES.JPG" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/BeTheChange.jpg" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
@@ -88,7 +88,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/index.php?option=com_beacart&amp;view=frontpage"><span style="color: #036d98;">SAFE STORE</span></a></h3>
-<img class="uk-align-center" src="/images/topbslider/SAFE STORE.JPG" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/ShopSafe.jpg" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -100,7 +100,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 328px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove uk-animation-hover uk-animation-top-left"><a class="uk-link-reset" href="/safe1/finding-help/resources.html"><span style="color: #036d98;">Educational Resources</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/brochures/Sibling Abuse Brochure.png" alt="SiblingAbuseBrochure" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/EDUCATIONAL RESOURCES.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
@@ -112,7 +112,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade uk-hidden-small" style="min-height: 326px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove"><a class="uk-link-reset uk-animation-hover uk-top-center" href="/safe1/library/research.html"><span style="color: #036d98;">RESEARCH</span></a></h3>
-<img class="uk-align-center" src="/safe1/images/Newsletter.png" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/RESEARCH.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"><a class="uk-link-reset" href="https://demo.yootheme.com/themes/joomla/2014/eat/index.php?&amp;style=default"></a></h4>
 <div class="uk-clearfix">&nbsp;</div>
 </div>
