--- a/BottomA4x2.html
+++ b/BottomA4x2.html
@@ -374,7 +374,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/Speakers1.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Stanley Green'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -387,7 +387,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/Elizabeth.jpg" alt="Elizabeth">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Elizabeth Crawford'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -400,7 +400,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/Don.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Don Dutton'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -413,7 +413,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/Patrick.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Patrick Dati'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -426,7 +426,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/Phil.png" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Phil Cook'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -439,7 +439,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/John.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'John Hamel'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -452,7 +452,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/David.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'David Pisarra'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -465,7 +465,7 @@
                 <img width="220" height="200" src="/images/speakersbureau/Richard.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Richard Davis'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -483,7 +483,7 @@
                 <img width="220" height="200" src="/images/outreach/IMG_4635.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Volunteer Fair CSUB 2015'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -496,7 +496,7 @@
                 <img width="220" height="200" src="/images/outreach/IMG_4650.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Volunteer Fair CSUB 2016'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -509,7 +509,7 @@
                 <img width="220" height="200" src="/images/outreach/IMG_4655.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Intern Fair 2016'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -522,7 +522,7 @@
                 <img width="220" height="200" src="/images/outreach/IMG_6388.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Coffee With The Cops Event'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -535,7 +535,7 @@
                 <img width="220" height="200" src="/images/outreach/IMG_6894.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Kern County High School District'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -548,7 +548,7 @@
                 <img width="220" height="200" src="/images/outreach/unnamed-3.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'USC'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -561,7 +561,7 @@
                 <img width="220" height="200" src="/images/outreach/unnamed-4.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Dan Bongino Fundraiser'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -574,7 +574,7 @@
                 <img width="220" height="200" src="/images/outreach/unnamed-6.jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Bakersfield Christian High School'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -592,7 +592,7 @@
                 <img width="220" height="200" src="/images/advocacy/IMG_0461.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Erin Pizzy, Karen Straughan, Dianna Thompson'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -605,7 +605,7 @@
                 <img width="220" height="200" src="/images/advocacy/IMG_0524.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Conference Presenter on Activism'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -618,7 +618,7 @@
                 <img width="220" height="200" src="/images/advocacy/IMG_0533.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Washington DC Lobbying Trip'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -631,7 +631,7 @@
                 <img width="220" height="200" src="/images/advocacy/IMG_0541.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Dianna Thompson & Senator Anne Cools'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -644,7 +644,7 @@
                 <img width="220" height="200" src="/images/advocacy/IMG_0550.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Dianna Thompson on Panel Discussion'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -657,7 +657,7 @@
                 <img width="220" height="200" src="/images/advocacy/IMG_0675.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Governors Office in Sacramento, CA'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -670,7 +670,7 @@
                 <img width="220" height="200" src="/images/advocacy/unnamed-10 (1).jpg" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Presentation at CSUB'</h2>
                     <div></div>
                   </div>
                 </div>
@@ -683,7 +683,7 @@
                 <img width="220" height="200" src="/images/advocacy/p1000560_edited.JPG" alt="">
                 <div class="uk-overlay-area">
                   <div class="uk-overlay-area-content">
-                    <h2 class="uk-h5 tm-overlay-title">''</h2>
+                    <h2 class="uk-h5 tm-overlay-title">'Testifying in Los Angeles'</h2>
                     <div></div>
                   </div>
                 </div>
