--- a/TopB.html
+++ b/TopB.html
@@ -100,7 +100,7 @@
 <div class="uk-panel uk-panel-box uk-panel-header tm-panel-note uk-animation-fade" style="min-height: 328px;">
 <p class="uk-text-muted tm-uppercase uk-margin-bottom-remove">&nbsp;</p>
 <h3 class="uk-h4 uk-panel-title uk-text-truncate uk-margin-top-remove uk-animation-hover uk-animation-top-left"><a class="uk-link-reset" href="/safe1/finding-help/resources.html"><span style="color: #036d98;">Educational Resources</span></a></h3>
-<img class="uk-align-center" src="/images/topbslider/EDUCATIONAL RESOURCES.JPG" width="220" height="220" />
+<img class="uk-align-center" src="/images/topbslider/Educational Resources.JPG" width="220" height="220" />
 <h4 class="uk-h5 uk-text-truncate uk-margin-bottom-remove"></h4>
 <div class="uk-clearfix">
 <div class="uk-float-left uk-text-truncate">&nbsp;</div>
